# semantic-retrieval-experiment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: directory_structure.md  flow_path.md  test_data_format_specification.md  test_execution_examples.md  testing_methodology.md
src/pairwise_classification/: config.yml  model_implementations.py  pairwise_classification_readme.md  semantic_matching_runner.py  similarity_model_runner.py
src/pairwise_classification/embedding/: base.py  bge.py
src/runner_worker/: checkpoint_manager.py  data_manager.py  data_manipulation.py  data_pipeline.py  data_source.py  experiment_runner.py  model_implementations.py  model_runner.py  parallel_processor.py  runner_worker_readme.md  semantic_matching_evaluator.py  semantic_matching_runner.py  semantic_matching_test_report.md  system_main.py
src/semantic_retrieval/: cli.py  semantic_retrieval_readme.md
src/semantic_retrieval/data/: data_loader.py
src/semantic_retrieval/embedding/: base.py  bge.py  fasttext.py
src/semantic_retrieval/evaluation/: evaluator.py
src/semantic_retrieval/experiment/: runner.py
src/semantic_retrieval/llm/: model.py
src/semantic_retrieval/retrieval/: base.py  bge.py  llm_reranked.py  word2vec.py
src/utils/: __init__.py  utils.py
tests/: batch_process_comparison.py  conftest.py  item_manipulation_comparison.py  performance_comparison.py  test_data_loader.py  test_embedding.py  test_evaluation.py  test_experiment.py  test_llm.py  test_retrieval.py  test_similarity.py
(+1 files in other folders)
